@@ -42,7 +42,6 @@ import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.w3c.dom.Document;
@@ -588,7 +587,6 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 		 */
 		public Builder addSegment(final TrackSegment segment) {
 			_segments.add(requireNonNull(segment));
-
 			return this;
 		}
 
@@ -613,7 +611,7 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 		 * @return {@code this} {@code Builder} for method chaining
 		 * @throws NullPointerException if the given argument is {@code null}
 		 */
-		public Builder addSegment(final Consumer<TrackSegment.Builder> segment) {
+		public Builder addSegment(final Consumer<? super TrackSegment.Builder> segment) {
 			final TrackSegment.Builder builder = TrackSegment.builder();
 			segment.accept(builder);
 			return addSegment(builder.build());
@@ -633,12 +631,7 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 
 		@Override
 		public Builder filter(final Predicate<? super TrackSegment> predicate) {
-			segments(
-				_segments.stream()
-					.filter(predicate)
-					.collect(Collectors.toList())
-			);
-
+			segments(_segments.stream().filter(predicate).toList());
 			return this;
 		}
 
@@ -652,7 +645,6 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 					.map(TrackSegment.class::cast)
 					.toList()
 			);
-
 			return this;
 		}
 
@@ -667,7 +659,6 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 					.flatMap(segment -> mapper.apply(segment).stream())
 					.toList()
 			);
-
 			return this;
 		}
 
@@ -678,7 +669,6 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 				? extends List<TrackSegment>> mapper
 		) {
 			segments(mapper.apply(_segments));
-
 			return this;
 		}
 
@@ -878,19 +868,22 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 	}
 
 	// Define the needed readers for the different versions.
-	private static final XMLReaders READERS = new XMLReaders()
-		.v00(XMLReader.elem("name"))
-		.v00(XMLReader.elem("cmt"))
-		.v00(XMLReader.elem("desc"))
-		.v00(XMLReader.elem("src"))
-		.v11(XMLReader.elems(Link.READER))
-		.v10(XMLReader.elem("url").map(Format::parseURI))
-		.v10(XMLReader.elem("urlname"))
-		.v00(XMLReader.elem("number").map(UInt::parse))
-		.v00(XMLReader.elem("type"))
-		.v00(XMLReader.doc("extensions"))
-		.v10(XMLReader.elems(TrackSegment.xmlReader(Version.V10)))
-		.v11(XMLReader.elems(TrackSegment.xmlReader(Version.V11)));
+	private static XMLReaders
+	readers(final Function<? super String, Length> lengthParser) {
+		return new XMLReaders()
+			.v00(XMLReader.elem("name"))
+			.v00(XMLReader.elem("cmt"))
+			.v00(XMLReader.elem("desc"))
+			.v00(XMLReader.elem("src"))
+			.v11(XMLReader.elems(Link.READER))
+			.v10(XMLReader.elem("url").map(Format::parseURI))
+			.v10(XMLReader.elem("urlname"))
+			.v00(XMLReader.elem("number").map(UInt::parse))
+			.v00(XMLReader.elem("type"))
+			.v00(XMLReader.doc("extensions"))
+			.v10(XMLReader.elems(TrackSegment.xmlReader(Version.V10, lengthParser)))
+			.v11(XMLReader.elems(TrackSegment.xmlReader(Version.V11, lengthParser)));
+	}
 
 	static XMLWriter<Track> xmlWriter(
 		final Version version,
@@ -899,11 +892,14 @@ public final class Track implements Iterable<TrackSegment>, Serializable {
 		return XMLWriter.elem("trk", writers(formatter).writers(version));
 	}
 
-	static XMLReader<Track> xmlReader(final Version version) {
+	static XMLReader<Track> xmlReader(
+		final Version version,
+		final Function<? super String, Length> lengthParser
+	) {
 		return XMLReader.elem(
 			version == Version.V10 ? Track::toTrackV10 : Track::toTrackV11,
 			"trk",
-			READERS.readers(version)
+			readers(lengthParser).readers(version)
 		);
 	}
 
