@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Random;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.xml.stream.XMLOutputFactory;
@@ -65,7 +64,7 @@ public abstract class XMLStreamTestBase<T> extends ObjectTester<T> {
 	public static <T> List<T> nextObjects(final Supplier<T> supplier, final Random random) {
 		return Stream.generate(supplier)
 			.limit(random.nextInt(20))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Test(invocationCount = 10)
